Chapter05/external-service-endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: external-service
subsets:
  - addresses:
    - ip: 192.168.3.196
    ports:
    - port: 33180
