Chapter05/kubia-svc-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-svc-ch05-loadbalancer
spec:
  type: LoadBalancer
  ports:
  - port: 40180
    targetPort: 8080
  selector:
    app: kubia
