Chapter05/kubia-svc-named-ports.yaml
apiVersion: v1
kind: Service
# 一个服务暴露多个端口的例子
metadata:
  name: kubia
  namespace: my-bks-k8sia
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  - name: https
    port: 443
    targetPort: 8443
  selector:
    app: kubia
