Chapter05/kubia-svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-svc-ch05-nodeport
spec:
  type: NodePort
  ports:
  - port: 40080
    # port是svc的端口，在集群上
    targetPort: 8080
    # targetPort是pod的端口
    nodePort: 30123
    # nodePort是node（集群节点）的端口
  selector:
    app: kubia
