Chapter05/kubia-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-svc
spec:
  ports:
  - port: 33080         # 这是服务的端口
    targetPort: 8080    # 这是pod的端口
  selector:
    app: kubia
