Chapter05/kubia-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kubia-svcch05-ingress
spec:
  rules:
  - host: kubia-svcch05-ingress.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kubia-svc-ch05-nodeport
          servicePort: 40080
